[package]
name = "ikea-led"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.esp-hal]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-hal = { version = "0.22.0", features = [
    "esp32s3",
    "log",
    #    "debug",
], default-features = false }
esp-hal-embassy = { version = "0.5.0", features = [
    "executors",
    "esp32s3",
], default-features = false }
esp-println = { version = "0.12.0", features = [
    "esp32s3",
    "log",
    "defmt-espflash",
] }
esp-wifi = { version = "0.11.0", features = [
    "esp32s3",
    # "async",
    # "embassy-net",
    "log",
    # "ipv4",
    # "tcp",
    # "icmp",
    # "igmp",
    # "dhcpv4",
    "wifi",
    "utils",
] }


embassy-time = { version = "0.3.2", features = ["generic-queue-8"] }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-65536"] }
embassy-sync = "0.6.0"
embassy-net = { version = "0.4.0", features = [
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "tcp",
    "udp",
] }


embedded-hal-async = "1.0.0"
embedded-svc = { version = "0.28.0", default-features = false }


byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
defmt = "0.3.8"
heapless = "0.8.0"
log = "0.4.22"
micromath = "2.1.0"
smoltcp = { version = "0.11.0", features = [
    "proto-ipv4",
], default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
xtensa-lx-rt = { version = "0.17.2", features = [
    "float-save-restore",
], default-features = false }
