[package]
name = "ikea-led"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.esp-hal]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
# Own Implementation
# esp-backtrace = { version = "0.14.2", features = [
#     "esp32s3",
#     "panic-handler",
#     "exception-handler",
#     "defmt",
#     "custom-halt",
# ] } # , path = "C:\\Programmieren\\rust_embedded\\esp32-s3-wroom-1\\dependencies\\esp-backtrace-0.14.2" 

esp-alloc = { version = "0.6.0", features = ["nightly"] }
esp-hal = { version = "0.23.0", features = [
    "esp32s3",
    "log",
], default-features = false }
esp-hal-embassy = { version = "0.6.0", features = [
    "executors",
    "esp32s3",
], default-features = false }
esp-println = { version = "0.13.0", features = [
    "esp32s3",
    "log",
    "defmt-espflash",
] }
esp-wifi = { version = "0.12.0", features = [
    "esp32s3",
    "log",
    "wifi",
    "utils",
] }


embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-sync = "0.6.2"
embassy-net = { version = "0.6.0", features = [
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "tcp",
] }


embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embedded-svc = { version = "0.28.1", features = [
    "nightly",
], default-features = false }
embedded-sdmmc = { version = "0.8.1", features = [
    "defmt-log",
], default-features = false } # maybe 0.8.1 if the correct spi trait is implemented


byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.39", default-features = false }
defmt = "0.3.10"
heapless = { version = "0.8.0", default-features = false }
log = "0.4.22"
micromath = "2.1.0"
smoltcp = { version = "0.12.0", features = [
    "proto-ipv4",
    "async",
    "defmt",
], default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
xtensa-lx-rt = { version = "0.18.0", features = [
    "float-save-restore",
    "esp32s3",
], default-features = false }
enumset = "1.1.5"
fugit = { version = "0.3.7", features = ["defmt"] }
